--- a/e-com.html
+++ b/e-com.html
@@ -1,7 +1,7 @@
 <head>
 
 
-    <link rel="stylesheet" href="p13.css">
+    <link rel="stylesheet" href="e-com.css">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
  </head>
  
